Fix(Vendedor): Correción al modulo de tickets y ventas
